force-app/main/default/objects/SPEN_LegalVariation__c/SPEN_LegalVariation__c.object-meta.xml
<CustomObject>
    <label>LegalVariation</label>
    <nameField>
        <displayFormat>LGV-{0000}</displayFormat>
        <label>LegalVariation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LegalsVariations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>