force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_DeclinedActionAgreed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeclinedActionAgreed__c</fullName>
    <label>Declined Action Agreed</label>
    <type>Date</type>
</CustomField>