force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_DeliverableConfirmed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliverableConfirmed__c</fullName>
    <label>Deliverable Confirmed</label>
    <type>Date</type>
</CustomField>