force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_Granted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Granted__c</fullName>
    <label>Granted</label>
    <type>Date</type>
</CustomField>