force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_LandOfficer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandOfficer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LegalsVariations</relationshipLabel>
    <relationshipName>LegalsVariations</relationshipName>
    <type>Lookup</type>
</CustomField>