force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_RefESCOM__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RefESCOM__c</fullName>
    <label>Ref (ESCOM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>