force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_Requested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Requested__c</fullName>
    <label>Requested</label>
    <type>Date</type>
</CustomField>