force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_Required__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>