force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_RevisedTarget__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RevisedTarget__c</fullName>
    <label>Revised Target</label>
    <type>Date</type>
</CustomField>