force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_Target__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Target__c</fullName>
    <label>Target</label>
    <type>Date</type>
</CustomField>