force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_TypeofLegalRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypeofLegalRequired__c</fullName>
    <label>Type of Legal Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easement</fullName>
            </value>
            <value>
                <fullName>Servitude</fullName>
            </value>
            <value>
                <fullName>Sub Station Lease</fullName>
            </value>
            <value>
                <fullName>Wayleave</fullName>
            </value>
            <value>
                <fullName>Wayleave (TTC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>