force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VarationDateCreated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VarationDateCreated__c</fullName>
    <label>Varation Date Created</label>
    <type>Date</type>
</CustomField>