force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEn_VariationAmount__c.field-meta.xml
<CustomField>
    <fullName>SPEn_VariationAmount__c</fullName>
    <label>Variation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>