force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VariationComment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariationComment__c</fullName>
    <label>Variation Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>