force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VariationDateAccepted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariationDateAccepted__c</fullName>
    <label>Variation Date Accepted</label>
    <type>Date</type>
</CustomField>