force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VariationNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariationNumber__c</fullName>
    <label>Variation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>