force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VariationPaymentConfirmed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariationPaymentConfirmed__c</fullName>
    <label>Variation Payment Confirmed</label>
    <type>Date</type>
</CustomField>