force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_VariationReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariationReason__c</fullName>
    <label>Variation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excavation Costs</fullName>
            </value>
            <value>
                <fullName>Traffic Management</fullName>
            </value>
            <value>
                <fullName>Incorrect Design</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>