force-app/main/default/objects/SPEN_LegalVariation__c/fields/SPEN_Wayleave__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Wayleave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wayleave</label>
    <type>Checkbox</type>
</CustomField>