force-app/main/default/objects/SPEN_LegalVariation__c/recordTypes/SPEN_LegalRecordtype.recordType-meta.xml
<RecordType>
    <fullName>SPEN_LegalRecordtype</fullName>
    <active>true</active>
    <label>Legal Recordtype</label>
</RecordType>