force-app/main/default/objects/SPEN_LegalVariation__c/recordTypes/SPEN_VariationRecordtype.recordType-meta.xml
<RecordType>
    <fullName>SPEN_VariationRecordtype</fullName>
    <active>true</active>
    <label>Variation Recordtype</label>
</RecordType>